<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="@layout/screen_business_info">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?sizerMedium"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_ein"
            android:textAppearance="?textAppearanceSubtitle1Medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_optional"
            android:textColor="?android:textColorSecondary"
            android:textAppearance="?textAppearanceSubtitle1" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputEin"
        style="@style/Widget.Backbase.TextInputLayout.Password"
        android:layout_marginTop="?spacerXSmall"
        android:layout_width="230dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:hint="Password" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_ein_description"
        android:textColor="?android:textColorSecondary"
        android:textAppearance="?textAppearanceSubtitle1" />

    <Button
        android:id="@+id/btnWhenDoYouNeedEin"
        style="?buttonStyleLink"
        android:background="@null"
        android:paddingVertical="0dp"
        android:layout_marginTop="0dp"
        android:layout_width="wrap_content"
        android:layout_height="?sizerXLarge"
        android:text="@string/button_when_do_you_need_ein" />

</merge>