<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="?spacerMedium">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_common_info"
            android:textAppearance="?textAppearanceBody1" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:enabled="false"
            android:layout_height="wrap_content"
            android:layout_marginBottom="?sizerMedium"
            app:endIconMode="dropdown_menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/roundingMode">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/txtBusinessStructure"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:text="@string/label_sole_propriotership" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="?spacerMedium"
            android:text="@string/label_business_legal_name"
            android:textAppearance="?textAppearanceSubtitle1Medium" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?spacerXSmall">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtLegalName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_last_known_Name"
                android:textAppearance="?textAppearanceSubtitle1Medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_if_applicable"
                android:textAppearance="?textAppearanceSubtitle1Medium" />

        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?spacerXSmall">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtKnownName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnMoreInfo"
            style="?buttonStyleLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_more_info" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_date_established"
            android:textAppearance="?textAppearanceSubtitle1Medium" />

        <com.backbase.android.design.calendar.CalendarButton
            android:id="@+id/calendarDateEstablished"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="?spacerXSmall"
            android:text="@string/set_date"
            app:calendarDateFormat="dd MMM yyyy"
            app:calendarTitle="@string/set_date" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_ein"
                android:textAppearance="?textAppearanceSubtitle1Medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_optional"
                android:textAppearance="?textAppearanceSubtitle1Medium" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Backbase.TextInputLayout.Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_common_info"
            android:textAppearance="?textAppearanceBody1" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="?sizerMedium"
            app:endIconMode="dropdown_menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/roundingMode">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/txtStateOperatingIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:text="@string/label_sole_propriotership" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.backbase.android.design.button.BackbaseButton
            android:id="@+id/btnContinue"
            style="?attr/buttonStylePrimary"
            android:layout_width="match_parent"
            android:layout_marginTop="?spacerMedium"
            android:layout_marginBottom="?spacerMedium"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/btn_continue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
