<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="@layout/screen_business_info">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_last_known_Name"
            android:textAppearance="?textAppearanceSubtitle1Medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_if_applicable"
            android:textColor="?android:textColorSecondary"
            android:textAppearance="?textAppearanceSubtitle1" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputKnownName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="0dp"
        android:layout_marginTop="?spacerXSmall">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtKnownName"
            android:paddingVertical="0dp"
            android:layout_marginVertical="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnMoreInfo"
        style="?buttonStyleLink"
        android:layout_gravity="start"
        android:gravity="start"
        android:paddingVertical="0dp"
        android:layout_marginTop="0dp"
        android:layout_width="wrap_content"
        android:layout_height="?sizerXLarge"
        android:text="@string/button_more_info" />

</merge>